1. Метод .of [#480713]